<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.proadvise.customer</groupId>
    <artifactId>InterfaceSapSiemensMuc</artifactId>
	<version>1.0.0</version>
    <name>InterfaceSapSiemensMuc</name>
    <properties>
        <spring.version>4.0.5.RELEASE</spring.version>
        <spring-batch.version>3.0.1.RELEASE</spring-batch.version>
        <env.p6api.version>15.2.7</env.p6api.version>
        <maven.build.year.format>yyyy</maven.build.year.format>
        <year>${maven.build.year}</year>
		<spring-boot.version>1.1.8.RELEASE</spring-boot.version>
		<spring-integration.version>4.0.1.RELEASE</spring-integration.version>
    </properties>
    <profiles>
        <profile>
            <activation>
                <property>
                    <name>env.p6api</name>
                </property>
            </activation>
            <id>P6API</id>
            <properties>
                <env.p6api.version>${env.p6api}</env.p6api.version>
            </properties>
        </profile>
    </profiles>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>version.txt</include>
                    <include>license.txt</include>
                    <include>InstallScript.iss</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>version.txt</exclude>
                    <exclude>license.txt</exclude>
                    <exclude>InstallScript.iss</exclude>
                </excludes>
            </resource>
        </resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-archetype-plugin</artifactId>
                    <version>2.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.0</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
                <plugin>
				    <groupId>org.apache.maven.plugins</groupId>
				    <artifactId>maven-javadoc-plugin</artifactId>
				    <version>2.9</version>
			            <configuration>
			                <additionalparam>-Xdoclint:none</additionalparam>
			            </configuration>
				</plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.6</version>
                    <configuration>
                        <escapeString>\</escapeString>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.9</version>
                    <configuration>
                        <argLine>-Xmx1424m -XX:MaxPermSize=256M</argLine>
                        <systemPropertyVariables>
                            <user.language>de</user.language>
                            <user.region>DE</user.region>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <configuration>
                        <outputDirectory>${project.build.directory}/lib</outputDirectory>
                        <overWriteReleases>true</overWriteReleases>
                        <overWriteSnapshots>true</overWriteSnapshots>
                        <overWriteIfNewer>true</overWriteIfNewer>
                    </configuration>

                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.3.2</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addClasspath>true</addClasspath>
                                <classpathPrefix>lib/</classpathPrefix>
                                <mainClass>de.proadvise.customer.InterfaceSapSiemensMuc.InterfaceSapSiemensMucApplication</mainClass>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.7</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <configuration>
                            <target>
                                <copy todir="${project.build.directory}/conf" flatten="true">
                                    <fileset dir="${project.build.testSourceDirectory}/../resources/conf">
                                        <include name="*.properties"/>
                                        <include name="${env.p6api.version}/BREBootStrap.xml"/>
                                    </fileset>
                                </copy>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.batch</groupId>
            <artifactId>spring-batch-test</artifactId>
            <version>${spring-batch.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>de.proadvise.tool</groupId>
            <artifactId>patest</artifactId>
            <version>0.5.RELEASE</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.3.2</version>
        </dependency>
        <dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>de.proadvise.bom</groupId>
            <artifactId>intgserverbom</artifactId>
            <version>${env.p6api.version}.RELEASE</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.batch</groupId>
            <artifactId>spring-batch-core</artifactId>
            <version>${spring-batch.version}</version>
        </dependency>
        <dependency>
            <groupId>de.proadvise.tool</groupId>
            <artifactId>pabatch</artifactId>
            <version>2.6.1.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>de.proadvise.common</groupId>
            <artifactId>pacommon</artifactId>
            <version>0.4.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>de.proadvise.tool</groupId>
            <artifactId>pap6utils</artifactId>
            <version>1.11.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>de.proadvise</groupId>
            <artifactId>paCrypt_lib</artifactId>
            <version>3.2.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>bouncycastle</groupId>
            <artifactId>bcprov-jdk16</artifactId>
            <version>140</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.16</version>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.4</version>
        </dependency>
        <dependency>
            <groupId>de.proadvise.tool</groupId>
            <artifactId>paMail</artifactId>
            <version>2.3.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <version>${spring-boot.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>spring-boot-starter-logging</artifactId>
                    <groupId>org.springframework.boot</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.integration</groupId>
            <artifactId>spring-integration-file</artifactId>
            <version>${spring-integration.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>1.9.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.batch</groupId>
            <artifactId>spring-batch-integration</artifactId>
            <version>${spring-batch.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.9</version>
        </dependency>
        <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity</artifactId>
            <version>1.7</version>
        </dependency>
        <dependency>
            <groupId>org.dbunit</groupId>
            <artifactId>dbunit</artifactId>
            <version>2.5.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.springtestdbunit</groupId>
            <artifactId>spring-test-dbunit</artifactId>
            <version>1.1.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-entitymanager</artifactId>
            <version>4.3.5.Final</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate.javax.persistence</groupId>
            <artifactId>hibernate-jpa-2.1-api</artifactId>
            <version>1.0.0.Final</version>
        </dependency>
    </dependencies>
    <url>https://proadvisede-4.sharepoint.emea.microsoftonline.com/pa%20Wiki%20intern/IT-ENT-PROJ-INTERFACE-SAP-MUC.aspx</url>
    <description>Ziel des Projekts ist die Schaffung einer Schnittstelle für den Transfer von Daten zu Plan- und Istwerten zu Terminen und Kapazitäten. Dies ermöglicht die simultane Datenübergabe von und nach P6 für alle relevanten Terminpläne. Manuelle Im- und Exporte sind in der Standardsystemfunktionalität teils auf einzelne Projekte begrenzt so dass manuelle Datentransfers projektspezifisch durchgeführt werden müssten.

Der Prozess P6 Rückmeldungen dient der Synchronisierung der Termindaten zwischen den Systemen SAP und P6. Die Rückmeldung der Anfangs- und Endtermine der SAP Netzplanvorgänge als Ist-Werte bzw. als Prognosewerte für Rückmeldungen in der Zukunft liegender Vorgangstermine (Option zur späteren Realisierung) ermöglicht der Produktionsplanung die Terminberechnung der Projekte auf Basis der aktuellen Fertigungssituation durchzuführen. Die entsprechenden Soll-Ist Vergleichsdarstellungen liefern Planungstransparenz und die Basis für ggf. erforderliche Anpassungen der Durchlaufzeiten von Vorgängen in den produktgerechten Terminplanvorlagen.

Weiterhin wird die Übernahme der Ist-Werte der Kapazitäten für die Werksauslastung (BA Daten) sowie von Kapazitätsdaten (Fertigungsstunden) der AV zur Aktualisierung der Kostenstellenressourcen auf Vorgangsebene abgebildet, um eine realitätsgetreue Darstellung der realisierten und der geplanten Fertigungsstunden zu ermöglichen.
</description>
    <organization>
        <name>proadvise GmbH</name>
        <url>www.proadvise.de</url>
    </organization>
    <scm>
        <url>ssh://git@scm.proadvise.local:22/home/git/repos/InterfaceSapSiemensMuc.git</url>
        <connection>git ssh</connection>
        <developerConnection>proadvise GmbH</developerConnection>
    </scm>
    <issueManagement>
        <system>Bugzilla</system>
        <url>https://tasks.proadvise.local/</url>
    </issueManagement>
</project>
